# fi

./: Cargo.toml  LICENSE
src/: error.rs  lib.rs  main.rs
src/backends/: cargo.rs  cargo_backend.rs  dnf.rs  flatpak.rs  mod.rs
src/models/: mod.rs  result.rs
src/ui/: display.rs  mod.rs  progress.rs  tui.rs
src/utils/: mod.rs
