[package]
name = "fi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
which = "5"
indicatif = "0.17"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.10"
ratatui = "0.26"
crossterm = "0.27"
